# backend/docs/swagger.json
@@ -750,22 +750,12 @@
     "definitions": {
         "CashDashboardRes": {
             "type": "object",
-            "required": [
-                "active_wallet_name",
-                "financial_summary",
-                "recent_transactions"
-            ],
             "properties": {
                 "active_wallet_name": {
                     "type": "string"
                 },
                 "financial_summary": {
                     "type": "object",
-                    "required": [
-                        "current_balance",
-                        "today_expense",
-                        "today_income"
-                    ],
                     "properties": {
                         "current_balance": {
                             "type": "number"
@@ -782,10 +772,6 @@
                     "type": "array",
                     "items": {
                         "type": "object",
-                        "required": [
-                            "category",
-                            "data"
-                        ],
                         "properties": {
                             "category": {
                                 "$ref": "#/definitions/domain.Category"
@@ -800,9 +786,6 @@
         },
         "CreateCategoryRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Category"
@@ -811,9 +794,6 @@
         },
         "CreateGoldRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Gold"
@@ -822,9 +802,6 @@
         },
         "DeleteCategoryRes": {
             "type": "object",
-            "required": [
-                "message"
-            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -833,9 +810,6 @@
         },
         "DeleteGoldRes": {
             "type": "object",
-            "required": [
-                "message"
-            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -844,9 +818,6 @@
         },
         "GetCategoryRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Category"
@@ -855,9 +826,6 @@
         },
         "GetGoldRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Gold"
@@ -866,17 +834,6 @@
         },
         "GoldDashboardRes": {
             "type": "object",
-            "required": [
-                "active_wallet_name",
-                "buy_price",
-                "latest_dollar_price",
-                "latest_gold_price_per_gram_idr",
-                "profit",
-                "recent_golds",
-                "total_asset",
-                "total_gold_items",
-                "total_weight"
-            ],
             "properties": {
                 "active_wallet_name": {
                     "type": "string"
@@ -897,9 +854,6 @@
                     "type": "array",
                     "items": {
                         "type": "object",
-                        "required": [
-                            "data"
-                        ],
                         "properties": {
                             "data": {
                                 "$ref": "#/definitions/domain.Gold"
@@ -920,11 +874,6 @@
         },
         "GoldSummaryRes": {
             "type": "object",
-            "required": [
-                "by_type",
-                "total_grams",
-                "total_value"
-            ],
             "properties": {
                 "by_type": {
                     "type": "object",
@@ -940,10 +889,6 @@
         },
         "LoginReq": {
             "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -955,12 +900,6 @@
         },
         "LoginRes": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "token",
-                "user_id"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -978,9 +917,6 @@
         },
         "LogoutRes": {
             "type": "object",
-            "required": [
-                "message"
-            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -989,10 +925,6 @@
         },
         "MeRes": {
             "type": "object",
-            "required": [
-                "data",
-                "updated_at"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.User"
@@ -1004,11 +936,6 @@
         },
         "RegisterReq": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -1023,12 +950,6 @@
         },
         "RegisterRes": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "token",
-                "user_id"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -1046,9 +967,6 @@
         },
         "UpdateCategoryRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Category"
@@ -1057,9 +975,6 @@
         },
         "UpdateGoldRes": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Gold"
@@ -1068,10 +983,6 @@
         },
         "category.CreateCategoryReq": {
             "type": "object",
-            "required": [
-                "name",
-                "type"
-            ],
             "properties": {
                 "name": {
                     "type": "string"
@@ -1083,9 +994,6 @@
         },
         "category.ListCategoriesRes": {
             "type": "object",
-            "required": [
-                "categories"
-            ],
             "properties": {
                 "categories": {
                     "type": "array",
@@ -1108,13 +1016,6 @@
         },
         "domain.Category": {
             "type": "object",
-            "required": [
-                "created_at",
-                "id",
-                "name",
-                "type",
-                "updated_at"
-            ],
             "properties": {
                 "created_at": {
                     "type": "string"
@@ -1141,6 +1042,10 @@
         "domain.Gold": {
             "type": "object",
             "properties": {
+                "carat": {
+                    "type": "number",
+                    "format": "float64"
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -1162,13 +1067,8 @@
                     "type": "number",
                     "format": "float64"
                 },
-                "purityPercent": {
-                    "description": "For reference",
-                    "type": "number",
-                    "format": "float64"
-                },
                 "type": {
-                    "description": "pure_24k, jewelry_ring, etc",
+                    "description": "pure_gold or jewelry",
                     "type": "string"
                 },
                 "updatedAt": {
@@ -1181,16 +1081,6 @@
         },
         "domain.Transaction": {
             "type": "object",
-            "required": [
-                "amount",
-                "category_id",
-                "created_at",
-                "date",
-                "description",
-                "id",
-                "updated_at",
-                "wallet_id"
-            ],
             "properties": {
                 "amount": {
                     "type": "number"
@@ -1220,13 +1110,6 @@
         },
         "domain.User": {
             "type": "object",
-            "required": [
-                "created_at",
-                "email",
-                "id",
-                "name",
-                "updated_at"
-            ],
             "properties": {
                 "created_at": {
                     "type": "string"
@@ -1276,9 +1159,6 @@
         },
         "dto.Category": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Category"
@@ -1287,10 +1167,6 @@
         },
         "dto.Error": {
             "type": "object",
-            "required": [
-                "code",
-                "message"
-            ],
             "properties": {
                 "code": {
                     "type": "integer"
@@ -1302,9 +1178,6 @@
         },
         "dto.Gold": {
             "type": "object",
-            "required": [
-                "data"
-            ],
             "properties": {
                 "data": {
                     "$ref": "#/definitions/domain.Gold"
@@ -1313,14 +1186,10 @@
         },
         "gold.CreateGoldReq": {
             "type": "object",
-            "required": [
-                "date",
-                "grams",
-                "price",
-                "type",
-                "wallet_id"
-            ],
             "properties": {
+                "carat": {
+                    "type": "number"
+                },
                 "date": {
                     "type": "string"
                 },
@@ -1334,9 +1203,6 @@
                     "description": "Price is the total purchase price for the recorded grams",
                     "type": "number"
                 },
-                "purity_percent": {
-                    "type": "number"
-                },
                 "type": {
                     "type": "string"
                 },
@@ -1347,9 +1213,6 @@
         },
         "gold.ListGoldsRes": {
             "type": "object",
-            "required": [
-                "golds"
-            ],
             "properties": {
                 "golds": {
                     "type": "array",
@@ -1362,6 +1225,9 @@
         "gold.UpdateGoldReq": {
             "type": "object",
             "properties": {
+                "carat": {
+                    "type": "number"
+                },
                 "date": {
                     "type": "string"
                 },
@@ -1372,9 +1238,6 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number"
-                },
-                "purity_percent": {
                     "type": "number"
                 },
                 "type": {
